sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: not found: value taile
  while(i != taile - 2)
             ^